@@ -131,7 +131,6 @@
                     <configuration>
                         <source>16</source>
                         <target>16</target>
-                        <compilerArgs>--enable-preview</compilerArgs>
                     </configuration>
                 </plugin>
                 <plugin>
